# functor-infix

./: functor-infix.cabal  infix-fmap.cabal
src/Data/Functor/: Infix.hs
src/Data/Functor/Infix/: Definitions.hs  TH.hs  Utilities.hs
