name:
  functor-infix
version:
  0.0.5
synopsis:
  Infix operators for mapping over compositions of functors. Lots of them.
homepage:
  https://github.com/fmap/functor-infix
license:
  MIT
license-file:
  LICENSE
author:
  vi
maintainer:
  vi@computational.law
category:
  Data
build-type:
  Simple
cabal-version:
  >= 1.10

library
  exposed-modules:
    Data.Functor.Infix
  other-modules:
    Data.Functor.Infix.Definitions,
    Data.Functor.Infix.TH
  build-depends:
    base             >= 4.7 && < 4.12,
    template-haskell >= 2.8 && < 2.14
  hs-source-dirs:
    src
  default-language:
    Haskell2010
